# dental-3d

./: .gitignore  LICENSE  README.md  requirements.txt
model/ModelSegmentator_min/: README_配布.md  pyproject.toml  requirements.txt
model/ModelSegmentator_min/ckpts/: stage1_last.pth  stage2_learned_last.pth
model/ModelSegmentator_min/configs/: exclude_cases.txt  landmark_heatmap.yaml  landmark_voting.yaml  manual_overrides.example.json  manual_overrides_dist325.json  manual_overrides_example.json  stage1_e1_baseline.yaml  stage1_e2_multiloss.yaml  stage1_fast.yaml  stage1_finetune.yaml  stage1_full.yaml  stage1_local_200.yaml  stage1_local_500.yaml  stage1_pointnet2_lite.yaml  stage1_pointnet2_lite_full.yaml  stage1_quick_test.yaml  stage1_v4_contrastive.yaml  stage1_v4b_boundary.yaml  stage1_v5_strong_aug.yaml  stage1_v6_pt_hybrid.yaml  stage1_v7_boundary_focus.yaml  stage2.yaml  stage2_pointnet2.yaml  stage2_run_full.yaml  stage2_run_full_dist320.yaml  stage2_run_full_dist325_msplit.yaml  stage2_run_full_retry.yaml  stage2_run_full_retry4.yaml  stage4.yaml
model/ModelSegmentator_min/ml/: train_landmarks.py
model/ModelSegmentator_min/ml/data/: augment.py  cache_stage2_feats.py  dataset_stage1.py  dataset_stage2.py  landmark_gaussian.py  preprocess_features.py
model/ModelSegmentator_min/ml/infer/: assign_fdi.py  boundary_refine.py  cluster_stage2.py  clustering.py  landmark_decode.py  run_stage1.py  segment_and_instance.py  smooth.py
model/ModelSegmentator_min/ml/models/: __init__.py  backbone_pointnet2.py  head_cluster_learned.py  head_landmark_reg.py  heads.py  (+3 more)
(+14 files in other folders)
