[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-segmentator"
version = "0.1.0"
description = "Dental mesh segmentation and landmarking for FDI tooth numbering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "pyyaml>=6.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "trimesh>=3.23",
  "scikit-learn>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ml*", "scripts*", "benchmarks*"]
